--- a/app/src/main/res/layout/item_gradient.xml
+++ b/app/src/main/res/layout/item_gradient.xml
@@ -2,16 +2,17 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/colorCard"
+    android:id="@+id/gradientCard"
     android:layout_width="50dp"
     android:layout_height="50dp"
     android:layout_marginEnd="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="2dp"
-    app:strokeColor="@color/md_theme_onPrimaryContainer">
+    app:strokeWidth="0dp"
+    app:strokeColor="@android:color/white">
 
     <View
-        android:id="@+id/colorView"
+        android:id="@+id/gradientView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
