--- a/app/src/main/res/layout/border_content_pattern.xml
+++ b/app/src/main/res/layout/border_content_pattern.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:layout_gravity="center_vertical"
     android:padding="8dp">
 
     <!-- Left: See All Button -->
