--- a/app/src/main/res/layout/image_color_solid_content.xml
+++ b/app/src/main/res/layout/image_color_solid_content.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="8dp">
 
@@ -14,9 +13,9 @@
         android:orientation="horizontal"
         android:layout_marginEnd="12dp">
 
-        <!-- Gradient Color Picker Card -->
+        <!-- Color Picker Card -->
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/gradientPickerCard"
+            android:id="@+id/colorPickerCard"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="8dp"
@@ -36,11 +35,12 @@
 
         </com.google.android.material.card.MaterialCardView>
 
-        <!-- Eyedropper Tool Card -->
+        <!-- Remove Card -->
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/eyedropperCard"
+            android:id="@+id/removeColorCard"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:visibility="visible"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp"
             android:clickable="true"
@@ -51,9 +51,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/colorize_24px"
-                android:contentDescription="Eyedropper"
-                app:tint="@color/md_theme_onSurface" />
+                android:src="@drawable/block_24px"
+                android:contentDescription="Remove"
+                app:tint="@color/md_theme_error" />
 
         </com.google.android.material.card.MaterialCardView>
 
