--- a/app/src/main/res/layout/image_edit_content_crop.xml
+++ b/app/src/main/res/layout/image_edit_content_crop.xml
@@ -12,7 +12,7 @@
         android:id="@+id/aspectCropButton"
         style="@style/Widget.Material3.Button.TonalButton"
         android:layout_width="0dp"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginEnd="8dp"
         android:text="Aspect Crop"
@@ -28,7 +28,7 @@
         android:id="@+id/shapeCropButton"
         style="@style/Widget.Material3.Button.TonalButton"
         android:layout_width="0dp"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginStart="8dp"
         android:text="Shape Crop"
