--- a/app/src/main/res/layout/background_edit_sheet.xml
+++ b/app/src/main/res/layout/background_edit_sheet.xml
@@ -19,11 +19,12 @@
             android:id="@+id/backButton"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:background="@drawable/circular"
             android:src="@drawable/chevron_backward_24px"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="4dp"
-            android:contentDescription="Back" />
+            android:contentDescription="Back"
+            app:tint="@color/md_theme_onPrimary" />
 
         <!-- Top Chip Navigation -->
         <HorizontalScrollView
@@ -38,6 +39,7 @@
                 android:layout_height="wrap_content"
                 android:paddingEnd="16dp"
                 app:chipSpacing="8dp"
+                app:selectionRequired="true"
                 app:singleSelection="true">
 
 
@@ -53,13 +55,13 @@
         android:layout_height="1dp" />
 
     <!-- Bottom Icon Navigation -->
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/contentContainer"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:orientation="horizontal">
+        android:layout_height="120dp">
 
 
-    </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
