--- a/app/src/main/res/layout/image_edit_content.xml
+++ b/app/src/main/res/layout/image_edit_content.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
     android:scrollbars="none">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
@@ -23,7 +24,7 @@
             android:textAllCaps="false"
             android:textSize="16sp"
             app:cornerRadius="28dp"
-            app:icon="@drawable/swap_horiz_24px"
+            app:icon="@drawable/swap_calls_24px"
             app:iconGravity="start"
             app:iconSize="24dp" />
 
@@ -45,7 +46,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/positionLeftButton"
             style="@style/Widget.Material3.Button.TonalButton.Icon"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:contentDescription="Left"
@@ -57,7 +58,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/positionUpButton"
             style="@style/Widget.Material3.Button.TonalButton.Icon"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:contentDescription="Up"
@@ -67,14 +68,26 @@
             app:iconSize="24dp" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/positionUpButton"
+            android:id="@+id/positionDownButton"
             style="@style/Widget.Material3.Button.TonalButton.Icon"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:contentDescription="Up"
             app:cornerRadius="32dp"
-            app:icon="@drawable/arrow_upward_24px"
+            app:icon="@drawable/arrow_downward_24px"
+            app:iconGravity="textEnd"
+            app:iconSize="24dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/positionRightButton"
+            style="@style/Widget.Material3.Button.TonalButton.Icon"
+            android:layout_width="64dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="Up"
+            app:cornerRadius="32dp"
+            app:icon="@drawable/arrow_downward_24px"
             app:iconGravity="textEnd"
             app:iconSize="24dp" />
 
