--- a/app/src/main/res/layout/image_edit_content_shadow.xml
+++ b/app/src/main/res/layout/image_edit_content_shadow.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="vertical">
 
     <!-- Shadow Sub-Option Chips -->
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
-        android:layout_marginBottom="12dp">
+        android:paddingHorizontal="8dp">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/shadowSubOptionsChipGroup"
@@ -36,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="Angle"
                 app:chipCornerRadius="20dp"
+                android:checked="true"
                 app:checkedIconVisible="false" />
 
             <com.google.android.material.chip.Chip
