--- a/app/src/main/res/layout/image_edit_sheet.xml
+++ b/app/src/main/res/layout/image_edit_sheet.xml
@@ -19,8 +19,9 @@
             android:id="@+id/backButton"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:background="@drawable/circular"
             android:src="@drawable/chevron_backward_24px"
+            app:tint="@color/md_theme_onPrimary"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="4dp"
             android:contentDescription="Back" />
@@ -55,10 +56,10 @@
     <FrameLayout
         android:id="@+id/imageEditContentContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="120dp">
+        android:layout_height="120dp">
 
         <!-- Content views will be added dynamically -->
+
 
     </FrameLayout>
 
