--- a/app/src/main/res/layout/item_scale_type.xml
+++ b/app/src/main/res/layout/item_scale_type.xml
@@ -32,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginVertical="6dp"
         android:text="Aspect Fill"
         android:textSize="11sp"
         android:gravity="center" />
