--- a/app/src/main/res/layout/shadow_content_angle.xml
+++ b/app/src/main/res/layout/shadow_content_angle.xml
@@ -3,59 +3,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:gravity="center"
-    android:padding="16dp">
+    android:orientation="horizontal">
 
     <!-- Left Arrow -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/angleLeftButton"
         style="@style/Widget.Material3.Button.TonalButton.Icon"
         android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        app:icon="@drawable/arrow_back_24px"
-        app:iconGravity="textStart"
-        app:iconSize="32dp"
+        android:contentDescription="Left"
         app:cornerRadius="32dp"
-        android:contentDescription="Left" />
+        app:icon="@drawable/arrow_back_24px"
+        app:iconGravity="textEnd"
+        app:iconSize="24dp" />
 
     <!-- Up Arrow -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/angleUpButton"
         style="@style/Widget.Material3.Button.TonalButton.Icon"
         android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        app:icon="@drawable/arrow_upward_24px"
-        app:iconGravity="textStart"
-        app:iconSize="32dp"
+        android:contentDescription="Up"
         app:cornerRadius="32dp"
-        android:contentDescription="Up" />
+        app:icon="@drawable/arrow_upward_24px"
+        app:iconGravity="textEnd"
+        app:iconSize="24dp" />
 
     <!-- Down Arrow -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/angleDownButton"
         style="@style/Widget.Material3.Button.TonalButton.Icon"
         android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        app:icon="@drawable/arrow_downward_24px"
-        app:iconGravity="textStart"
-        app:iconSize="32dp"
+        android:contentDescription="Down"
         app:cornerRadius="32dp"
-        android:contentDescription="Down" />
+        app:icon="@drawable/arrow_downward_24px"
+        app:iconGravity="textEnd"
+        app:iconSize="24dp" />
 
     <!-- Right Arrow -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/angleRightButton"
         style="@style/Widget.Material3.Button.TonalButton.Icon"
         android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="Right"
+        app:cornerRadius="24dp"
         app:icon="@drawable/arrow_forward_24px"
-        app:iconGravity="textStart"
-        app:iconSize="32dp"
-        app:cornerRadius="32dp"
-        android:contentDescription="Right" />
+        app:iconGravity="textEnd"
+        app:iconSize="24dp" />
 
 </LinearLayout>
