--- a/app/src/main/res/layout/view_opacity_options.xml
+++ b/app/src/main/res/layout/view_opacity_options.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="24dp">
+    android:layout_marginTop="12dp"
+    android:layout_gravity="center_vertical"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/opacityValue"
@@ -13,11 +15,37 @@
         android:text="100%"
         android:textSize="14sp" />
 
-    <SeekBar
-        android:id="@+id/opacitySlider"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="100"
-        android:progress="5" />
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/add_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/circular"
+            android:src="@drawable/add_24px"
+            app:tint="@color/md_theme_onPrimary" />
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/opacitySlider"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:stepSize="1"
+            android:value="100"
+            android:valueTo="100" />
+
+        <ImageButton
+            android:id="@+id/minus_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/circular"
+            android:padding="8dp"
+            android:src="@drawable/remove_24px"
+            app:tint="@color/md_theme_onPrimary" />
+
+    </LinearLayout>
 
 </LinearLayout>
